--- a/01-Block-Diagram/Block-Diagram/index.html
+++ b/01-Block-Diagram/Block-Diagram/index.html
@@ -861,7 +861,7 @@
   <h1>Individual Block Diagram</h1>
 
 <h2 id="overview">Overview</h2>
-<p>This block diagram outlines the audio sensor subsystem for a motion- and audio-activated light. The board includes a microphone for detecting sound, with an op-amp used to tune the analog signal before it is read by the onboard ADC of the PIC18F57Q43 microcontroller. A digital output signal is then sent to a teammate's board to trigger a response.</p>
+<p>This block diagram outlines the audio sensor subsystem for a motion- and audio-activated light. The board includes a microphone for detecting sound, with an op-amp used to tune the analog signal before it is read by the onboard ADC of the PIC18F57Q43 Curiosity Nano microcontroller. A digital output signal is then sent to a teammate's board to trigger a response.</p>
 <p>The subsystem operates at 5V of power via a voltage regulator. A single reset button is included as a digital input. Communication with the main control board is handled through an 8-pin ribbon cable, using one digital signal line and ground. The block diagram documents all major connections, power domains, signal directions, microcontroller use, and team interconnections.</p>
 <h2 id="diagram-link">Diagram Link</h2>
 <p>A direct link to the source file of the following block diagram can be found <a href="https://github.com/alazaritt/alazaritt.github.io/raw/main/docs/01-Block-Diagram/individual%20block%20diagram.drawio">here</a>.</p>
