--- a/03-BOM/BOM/index.html
+++ b/03-BOM/BOM/index.html
@@ -903,25 +903,190 @@
 </tr>
 <tr>
 <td style="text-align: left;">Green LED</td>
-<td style="text-align: left;"></td>
+<td style="text-align: left;">1</td>
 <td style="text-align: left;">0.2750</td>
 <td style="text-align: left;">$2.75</td>
 <td style="text-align: left;">KEMET</td>
 <td style="text-align: left;">C0805F104K5RACTU</td>
 <td style="text-align: left;">PRLTA 109</td>
 <td style="text-align: left;">n/a</td>
-<td style="text-align: left;">C2, C4, C6, C7, C8, C9, C10, C11, C12, C16</td>
+<td style="text-align: left;">D1</td>
 </tr>
 <tr>
-<td style="text-align: left;">0.1 µF Ceramic Capacitor, +/-10%, X7R, 50V, 0805 package</td>
-<td style="text-align: left;">10</td>
+<td style="text-align: left;">Diode 1N4001</td>
+<td style="text-align: left;">2</td>
 <td style="text-align: left;">0.2750</td>
 <td style="text-align: left;">$2.75</td>
 <td style="text-align: left;">KEMET</td>
 <td style="text-align: left;">C0805F104K5RACTU</td>
 <td style="text-align: left;">PRLTA 109</td>
 <td style="text-align: left;">n/a</td>
-<td style="text-align: left;">C2, C4, C6, C7, C8, C9, C10, C11, C12, C16</td>
+<td style="text-align: left;">D2, D3</td>
+</tr>
+<tr>
+<td style="text-align: left;">200mA fuse</td>
+<td style="text-align: left;">1</td>
+<td style="text-align: left;">0.2750</td>
+<td style="text-align: left;">$2.75</td>
+<td style="text-align: left;">KEMET</td>
+<td style="text-align: left;">C0805F104K5RACTU</td>
+<td style="text-align: left;">PRLTA 109</td>
+<td style="text-align: left;">n/a</td>
+<td style="text-align: left;">F1</td>
+</tr>
+<tr>
+<td style="text-align: left;">Barrel jack switch</td>
+<td style="text-align: left;">1</td>
+<td style="text-align: left;">0.2750</td>
+<td style="text-align: left;">$2.75</td>
+<td style="text-align: left;">KEMET</td>
+<td style="text-align: left;">C0805F104K5RACTU</td>
+<td style="text-align: left;">PRLTA 109</td>
+<td style="text-align: left;">n/a</td>
+<td style="text-align: left;">J1</td>
+</tr>
+<tr>
+<td style="text-align: left;">Ribbon connector</td>
+<td style="text-align: left;">1</td>
+<td style="text-align: left;">0.2750</td>
+<td style="text-align: left;">$2.75</td>
+<td style="text-align: left;">KEMET</td>
+<td style="text-align: left;">C0805F104K5RACTU</td>
+<td style="text-align: left;">PRLTA 109</td>
+<td style="text-align: left;">n/a</td>
+<td style="text-align: left;">J2</td>
+</tr>
+<tr>
+<td style="text-align: left;">UART connector</td>
+<td style="text-align: left;">1</td>
+<td style="text-align: left;">0.2750</td>
+<td style="text-align: left;">$2.75</td>
+<td style="text-align: left;">KEMET</td>
+<td style="text-align: left;">C0805F104K5RACTU</td>
+<td style="text-align: left;">PRLTA 109</td>
+<td style="text-align: left;">n/a</td>
+<td style="text-align: left;">J3</td>
+</tr>
+<tr>
+<td style="text-align: left;">Extra headers</td>
+<td style="text-align: left;">1</td>
+<td style="text-align: left;">0.2750</td>
+<td style="text-align: left;">$2.75</td>
+<td style="text-align: left;">KEMET</td>
+<td style="text-align: left;">C0805F104K5RACTU</td>
+<td style="text-align: left;">PRLTA 109</td>
+<td style="text-align: left;">n/a</td>
+<td style="text-align: left;">J4</td>
+</tr>
+<tr>
+<td style="text-align: left;">Small bridged jumpers</td>
+<td style="text-align: left;">5</td>
+<td style="text-align: left;">0.2750</td>
+<td style="text-align: left;">$2.75</td>
+<td style="text-align: left;">KEMET</td>
+<td style="text-align: left;">C0805F104K5RACTU</td>
+<td style="text-align: left;">PRLTA 109</td>
+<td style="text-align: left;">n/a</td>
+<td style="text-align: left;">JP1, JP2, JP3, JP4, JP5</td>
+</tr>
+<tr>
+<td style="text-align: left;">L7805 voltage regulator</td>
+<td style="text-align: left;">1</td>
+<td style="text-align: left;">0.2750</td>
+<td style="text-align: left;">$2.75</td>
+<td style="text-align: left;">KEMET</td>
+<td style="text-align: left;">C0805F104K5RACTU</td>
+<td style="text-align: left;">PRLTA 109</td>
+<td style="text-align: left;">n/a</td>
+<td style="text-align: left;">L7805AL1</td>
+</tr>
+<tr>
+<td style="text-align: left;">Microphone</td>
+<td style="text-align: left;">1</td>
+<td style="text-align: left;">0.2750</td>
+<td style="text-align: left;">$2.75</td>
+<td style="text-align: left;">KEMET</td>
+<td style="text-align: left;">C0805F104K5RACTU</td>
+<td style="text-align: left;">PRLTA 109</td>
+<td style="text-align: left;">n/a</td>
+<td style="text-align: left;">MK1</td>
+</tr>
+<tr>
+<td style="text-align: left;">200mA fuse</td>
+<td style="text-align: left;">1</td>
+<td style="text-align: left;">0.2750</td>
+<td style="text-align: left;">$2.75</td>
+<td style="text-align: left;">KEMET</td>
+<td style="text-align: left;">C0805F104K5RACTU</td>
+<td style="text-align: left;">PRLTA 109</td>
+<td style="text-align: left;">n/a</td>
+<td style="text-align: left;">F1</td>
+</tr>
+<tr>
+<td style="text-align: left;">200mA fuse</td>
+<td style="text-align: left;">1</td>
+<td style="text-align: left;">0.2750</td>
+<td style="text-align: left;">$2.75</td>
+<td style="text-align: left;">KEMET</td>
+<td style="text-align: left;">C0805F104K5RACTU</td>
+<td style="text-align: left;">PRLTA 109</td>
+<td style="text-align: left;">n/a</td>
+<td style="text-align: left;">F1</td>
+</tr>
+<tr>
+<td style="text-align: left;">200mA fuse</td>
+<td style="text-align: left;">1</td>
+<td style="text-align: left;">0.2750</td>
+<td style="text-align: left;">$2.75</td>
+<td style="text-align: left;">KEMET</td>
+<td style="text-align: left;">C0805F104K5RACTU</td>
+<td style="text-align: left;">PRLTA 109</td>
+<td style="text-align: left;">n/a</td>
+<td style="text-align: left;">F1</td>
+</tr>
+<tr>
+<td style="text-align: left;">200mA fuse</td>
+<td style="text-align: left;">1</td>
+<td style="text-align: left;">0.2750</td>
+<td style="text-align: left;">$2.75</td>
+<td style="text-align: left;">KEMET</td>
+<td style="text-align: left;">C0805F104K5RACTU</td>
+<td style="text-align: left;">PRLTA 109</td>
+<td style="text-align: left;">n/a</td>
+<td style="text-align: left;">F1</td>
+</tr>
+<tr>
+<td style="text-align: left;">200mA fuse</td>
+<td style="text-align: left;">1</td>
+<td style="text-align: left;">0.2750</td>
+<td style="text-align: left;">$2.75</td>
+<td style="text-align: left;">KEMET</td>
+<td style="text-align: left;">C0805F104K5RACTU</td>
+<td style="text-align: left;">PRLTA 109</td>
+<td style="text-align: left;">n/a</td>
+<td style="text-align: left;">F1</td>
+</tr>
+<tr>
+<td style="text-align: left;">200mA fuse</td>
+<td style="text-align: left;">1</td>
+<td style="text-align: left;">0.2750</td>
+<td style="text-align: left;">$2.75</td>
+<td style="text-align: left;">KEMET</td>
+<td style="text-align: left;">C0805F104K5RACTU</td>
+<td style="text-align: left;">PRLTA 109</td>
+<td style="text-align: left;">n/a</td>
+<td style="text-align: left;">F1</td>
+</tr>
+<tr>
+<td style="text-align: left;">200mA fuse</td>
+<td style="text-align: left;">1</td>
+<td style="text-align: left;">0.2750</td>
+<td style="text-align: left;">$2.75</td>
+<td style="text-align: left;">KEMET</td>
+<td style="text-align: left;">C0805F104K5RACTU</td>
+<td style="text-align: left;">PRLTA 109</td>
+<td style="text-align: left;">n/a</td>
+<td style="text-align: left;">F1</td>
 </tr>
 </tbody>
 </table>
